docs/k8s/zalenium-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: zalenium
  name: zalenium
spec:
  ports:
  - name: 4444-tcp
    port: 4444
    protocol: TCP
    targetPort: 4444
  - name: 4445-tcp
    port: 4445
    protocol: TCP
    targetPort: 4445
  selector:
    app: zalenium
    role: hub
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
