docs/k8s/zalenium-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: zalenium
  annotations:
    haproxy.router.openshift.io/timeout: 60s
spec:
  host: zalenium.example.com
  port:
    targetPort: 4444-tcp
  to:
    kind: Service
    name: zalenium
